--- a/build.gradle
+++ b/build.gradle
@@ -121,20 +121,20 @@ repositories {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.18.2-40.1.25'
-    compileOnly fg.deobf("mcp.mobius.waila:wthit-api:forge-4.7.2")
-    runtimeOnly fg.deobf("mcp.mobius.waila:wthit:forge-4.7.2")
-    library('com.github.age-series:libage:main-SNAPSHOT')
-    library("org.apache.commons:commons-math3:3.6.1")
-    library("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
+    compileOnly fg.deobf('mcp.mobius.waila:wthit-api:forge-4.7.2')
+    runtimeOnly fg.deobf('mcp.mobius.waila:wthit:forge-4.7.2')
+    library('com.github.age-series:libage:feature~thermal-SNAPSHOT')
+    library('org.apache.commons:commons-math3:3.6.1')
+    library('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2')
     library('com.charleskorn.kaml:kaml:0.40.0')
-    implementation fg.deobf("com.jozufozu.flywheel:Flywheel-Forge:1.18-0.6.4.87")
+    implementation fg.deobf('com.jozufozu.flywheel:Flywheel-Forge:1.18-0.6.4.87')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    library "io.prometheus:simpleclient:0.16.0"
-    library "io.prometheus:simpleclient_hotspot:0.16.0"
-    library "io.prometheus:simpleclient_httpserver:0.16.0"
-    library "io.prometheus:simpleclient_pushgateway:0.16.0"
+    library 'io.prometheus:simpleclient:0.16.0'
+    library 'io.prometheus:simpleclient_hotspot:0.16.0'
+    library 'io.prometheus:simpleclient_httpserver:0.16.0'
+    library 'io.prometheus:simpleclient_pushgateway:0.16.0'
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
     // runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}") // Adds the full JEI mod as a runtime dependency
