--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,7 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.18.2-40.1.25'
     compileOnly fg.deobf('mcp.mobius.waila:wthit-api:forge-4.7.2')
     runtimeOnly fg.deobf('mcp.mobius.waila:wthit:forge-4.7.2')
-    library('com.github.age-series:libage:feature~thermal-SNAPSHOT')
+    library('com.github.age-series:libage:next-SNAPSHOT')
     library('org.apache.commons:commons-math3:3.6.1')
     library('org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2')
     library('com.charleskorn.kaml:kaml:0.40.0')
