Backports to 1.19.2 and adds JOML (to ease future updates) and Create

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,23 @@
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+minecraft_version = 1.19.2
+forge_version = 43.2.4
+
+create_minecraft_version = 1.19.2
+flywheel_minecraft_version = 1.19.2
+create_version = 0.5.1.c-36
+flywheel_version = 0.6.9-18
+registrate_version = MC1.19-1.1.5
+
+wthit_version = 5.19.0
+badpackets_version = 0.2.2
+
+libage_version = 8ed5950a0d
+
+forgegradle_version = 5.1.53
+mixingradle_version = 0.7-SNAPSHOT
+mixin_version = 0.8.5
+librarian_version = 1.+
+parchment_version = 2022.11.06
