--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,7 @@
 public-f net.minecraft.world.inventory.AbstractContainerMenu f_38848_
 public net.minecraft.world.level.chunk.LevelChunk m_156406_(Lnet/minecraft/world/level/block/entity/BlockEntity;)V # updateBlockEntityTicker
 public net.minecraft.world.level.chunk.LevelChunk m_156412_(Lnet/minecraft/core/BlockPos;)V # removeBlockEntityTicker
+public net.minecraft.world.level.lighting.LayerLightEngine m_7351_(JI)V # setLevel
+public net.minecraft.world.level.lighting.LayerLightEngine m_6172_(J)I # getLevel
+public net.minecraft.world.level.lighting.LayerLightEngine m_75682_(Lnet/minecraft/world/level/chunk/DataLayer;J)I # getLevel
+public net.minecraft.world.level.lighting.LevelLightEngine f_75802_ # blockEngine
