Fixes some light problems and improves wires a little bit

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,5 @@ public net.minecraft.world.level.lighting.LayerLightEngine m_7351_(JI)V # setLev
 public net.minecraft.world.level.lighting.LayerLightEngine m_6172_(J)I # getLevel
 public net.minecraft.world.level.lighting.LayerLightEngine m_75682_(Lnet/minecraft/world/level/chunk/DataLayer;J)I # getLevel
 public net.minecraft.world.level.lighting.LevelLightEngine f_75802_ # blockEngine
+public net.minecraft.server.level.ChunkMap f_140129_ # updatingChunkMap
+public net.minecraft.server.level.ChunkHolder m_140029_(Lnet/minecraft/world/level/Level;Lnet/minecraft/core/BlockPos;)V # broadcastBlockEntity
