--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,9 +1,7 @@
-public-f net.minecraft.world.inventory.AbstractContainerMenu f_38848_
 public net.minecraft.world.level.chunk.LevelChunk m_156406_(Lnet/minecraft/world/level/block/entity/BlockEntity;)V # updateBlockEntityTicker
 public net.minecraft.world.level.chunk.LevelChunk m_156412_(Lnet/minecraft/core/BlockPos;)V # removeBlockEntityTicker
-public net.minecraft.world.level.lighting.LayerLightEngine m_7351_(JI)V # setLevel
-public net.minecraft.world.level.lighting.LayerLightEngine m_6172_(J)I # getLevel
-public net.minecraft.world.level.lighting.LayerLightEngine m_75682_(Lnet/minecraft/world/level/chunk/DataLayer;J)I # getLevel
-public net.minecraft.world.level.lighting.LevelLightEngine f_75802_ # blockEngine
 public net.minecraft.server.level.ChunkMap f_140129_ # updatingChunkMap
 public net.minecraft.server.level.ChunkHolder m_140029_(Lnet/minecraft/world/level/Level;Lnet/minecraft/core/BlockPos;)V # broadcastBlockEntity
+public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask
+public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask$CompileResults
+public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk m_112805_(Lcom/mojang/blaze3d/vertex/BufferBuilder;)V # beginLayer
