--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,4 @@ public net.minecraft.server.level.ChunkHolder m_140029_(Lnet/minecraft/world/lev
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk$RebuildTask$CompileResults
 public net.minecraft.client.renderer.chunk.ChunkRenderDispatcher$RenderChunk m_112805_(Lcom/mojang/blaze3d/vertex/BufferBuilder;)V # beginLayer
+public net.minecraft.client.renderer.chunk.RenderRegionCache$ChunkInfo
